syntax = "proto3";

option csharp_namespace = "Knowledge.Grpc.NetworkInfoUpdate";

package NetworkInfoUpdate;

service NetworkInfoUpdater {
    rpc Update (NetworkInfoUpdateRequest) returns (NetworkInfoUpdateResponse) {}
}

message NetworkInfoUpdateRequest {
    repeated RegionUpdate region_updates = 1;
}

message RegionUpdate {
    string region_name = 1;
    repeated TopologyUpdate topology_updates = 2;
    repeated WorkloadUpdate workload_updates = 3;
}

message TopologyUpdate {
    int32 network_object_id = 1;
    enum NetworkObjectUpdateType {
        ADD = 0;
        REMOVE = 1;
    }
    NetworkObjectUpdateType update_type = 2;
}

message WorkloadUpdate {
    int32 network_object_id = 1;
    Utilization utilization = 2;
    float availability = 3;
}

message Utilization {
    float cpu_utilization = 1;
    float memory_utilization = 2;
}

message NetworkInfoUpdateResponse {
    // Empty
}