syntax = "proto3";

package nl;

option csharp_namespace = "NetworkLayer.Grpc.NetworkObjects";

import "google/protobuf/timestamp.proto";

service NetworkObjectUpdater {
  rpc GetUpdate(NetworkObjectUpdateRequest) returns (NetworkObjectUpdateResponse) {}
}

message NetworkObjectUpdateRequest {
    // Empty
}

message NetworkObjectUpdateResponse {
    google.protobuf.Timestamp timestamp = 1;
    repeated NewNetworkObject created_objects = 2;
    repeated NetworkObject network_objects = 3;
}

message NewNetworkObject {
    int32 id = 1;
    google.protobuf.Timestamp created_at = 2;
}

message NetworkObject {
    int32 id = 1;
    Utilization utilization = 2;
    float availability = 3;
}

message Utilization {
    float cpu_usage = 1;
    float memory_usage = 2;
}